# codebase-context-engine

./: .gitignore  EVAL_RESULTS.md  PLAN.md  pyproject.toml
ctx/: budget.py  cli.py  embeddings.py  engine.py  eval.py  git_history.py  graph.py  packer.py  ranker.py
ctx/parsers/: python.py
evals/: p3_tasks.py  self_eval.py
tests/: test_budget.py  test_cli.py  test_embeddings.py  test_eval.py  test_git_history.py  test_graph.py  test_packer.py  test_parser.py  test_ranker.py
