[project]
name = "codebase-context-engine"
version = "0.1.0"
description = "Context assembler for coding agents: retrieve and rank the most relevant code, docs, and history to fit within a token budget."
requires-python = ">=3.12"
dependencies = [
    "gitpython",
    "tiktoken",
    "numpy",
    "networkx",
    "anthropic",
    "click",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctx"]

[project.scripts]
ctx = "ctx.cli:cli"
